--- a/Day 2/Introduction-to-pandas.ipynb
+++ b/Day 2/Introduction-to-pandas.ipynb
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Make</th>\n",
        "      <th>Colour</th>\n",
        "      <th>Odometer (KM)</th>\n",
@@ -360,7 +359,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Toyota</td>\n",
        "      <td>White</td>\n",
        "      <td>150043</td>\n",
@@ -369,7 +367,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Honda</td>\n",
        "      <td>Red</td>\n",
        "      <td>87899</td>\n",
@@ -378,7 +375,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Toyota</td>\n",
        "      <td>Blue</td>\n",
        "      <td>32549</td>\n",
@@ -387,7 +383,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>BMW</td>\n",
        "      <td>Black</td>\n",
        "      <td>11179</td>\n",
@@ -396,7 +391,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Nissan</td>\n",
        "      <td>White</td>\n",
        "      <td>213095</td>\n",
@@ -405,7 +399,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>5</td>\n",
        "      <td>Toyota</td>\n",
        "      <td>Green</td>\n",
        "      <td>99213</td>\n",
@@ -414,7 +407,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>6</td>\n",
        "      <td>Honda</td>\n",
        "      <td>Blue</td>\n",
        "      <td>45698</td>\n",
@@ -423,7 +415,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>7</td>\n",
        "      <td>Honda</td>\n",
        "      <td>Blue</td>\n",
        "      <td>54738</td>\n",
@@ -432,7 +423,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>8</td>\n",
        "      <td>Toyota</td>\n",
        "      <td>White</td>\n",
        "      <td>60000</td>\n",
@@ -441,7 +431,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>9</td>\n",
        "      <td>Nissan</td>\n",
        "      <td>White</td>\n",
        "      <td>31600</td>\n",
@@ -453,20 +442,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0    Make Colour  Odometer (KM)  Doors       Price\n",
-       "0           0  Toyota  White         150043      4   $4,000.00\n",
-       "1           1   Honda    Red          87899      4   $5,000.00\n",
-       "2           2  Toyota   Blue          32549      3   $7,000.00\n",
-       "3           3     BMW  Black          11179      5  $22,000.00\n",
-       "4           4  Nissan  White         213095      4   $3,500.00\n",
-       "5           5  Toyota  Green          99213      4   $4,500.00\n",
-       "6           6   Honda   Blue          45698      4   $7,500.00\n",
-       "7           7   Honda   Blue          54738      4   $7,000.00\n",
-       "8           8  Toyota  White          60000      4   $6,250.00\n",
-       "9           9  Nissan  White          31600      4   $9,700.00"
+       "     Make Colour  Odometer (KM)  Doors       Price\n",
+       "0  Toyota  White         150043      4   $4,000.00\n",
+       "1   Honda    Red          87899      4   $5,000.00\n",
+       "2  Toyota   Blue          32549      3   $7,000.00\n",
+       "3     BMW  Black          11179      5  $22,000.00\n",
+       "4  Nissan  White         213095      4   $3,500.00\n",
+       "5  Toyota  Green          99213      4   $4,500.00\n",
+       "6   Honda   Blue          45698      4   $7,500.00\n",
+       "7   Honda   Blue          54738      4   $7,000.00\n",
+       "8  Toyota  White          60000      4   $6,250.00\n",
+       "9  Nissan  White          31600      4   $9,700.00"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,13 +463,6 @@
    "source": [
     "export_Car_sales"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
