--- a/Scikit-learn/Evaluating-Classification-Model.ipynb
+++ b/Scikit-learn/Evaluating-Classification-Model.ipynb
@@ -332,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Classification model evaluation metrics\n",
+    "### Classification Model Evaluation metrics\n",
     "\n",
     "* Accuracy\n",
     "* Area under ROC\n",
